[gd_scene load_steps=14 format=3 uid="uid://drvt76e5nhpvr"]

[ext_resource type="Script" path="res://scripts/world.gd" id="1_cbppm"]
[ext_resource type="Texture2D" uid="uid://cdb4opb748qgj" path="res://sprites/tilesets/plains.png" id="1_npq7e"]
[ext_resource type="Texture2D" uid="uid://bo8mqixg4soo" path="res://sprites/tilesets/grass.png" id="2_no3xr"]
[ext_resource type="Texture2D" uid="uid://c43s6ka5b0a0d" path="res://sprites/objects/objects.png" id="3_lojli"]
[ext_resource type="PackedScene" uid="uid://osigr25ushiy" path="res://scenes/player.tscn" id="4_esg56"]
[ext_resource type="PackedScene" uid="uid://cl3cvvr84y7pg" path="res://scenes/enemy.tscn" id="5_ls2iy"]

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_umt88"]
texture = ExtResource("1_npq7e")
1:0/0 = 0
1:0/0/physics_layer_0/linear_velocity = Vector2(0, 0)
1:0/0/physics_layer_0/angular_velocity = 0.0
2:0/0 = 0
2:0/0/physics_layer_0/linear_velocity = Vector2(0, 0)
2:0/0/physics_layer_0/angular_velocity = 0.0
3:0/0 = 0
3:0/0/physics_layer_0/linear_velocity = Vector2(0, 0)
3:0/0/physics_layer_0/angular_velocity = 0.0
4:0/0 = 0
4:0/0/physics_layer_0/linear_velocity = Vector2(0, 0)
4:0/0/physics_layer_0/angular_velocity = 0.0
5:0/0 = 0
5:0/0/physics_layer_0/linear_velocity = Vector2(0, 0)
5:0/0/physics_layer_0/angular_velocity = 0.0
1:1/0 = 0
1:1/0/physics_layer_0/linear_velocity = Vector2(0, 0)
1:1/0/physics_layer_0/angular_velocity = 0.0
2:1/0 = 0
2:1/0/physics_layer_0/linear_velocity = Vector2(0, 0)
2:1/0/physics_layer_0/angular_velocity = 0.0
3:1/0 = 0
3:1/0/physics_layer_0/linear_velocity = Vector2(0, 0)
3:1/0/physics_layer_0/angular_velocity = 0.0
4:1/0 = 0
4:1/0/physics_layer_0/linear_velocity = Vector2(0, 0)
4:1/0/physics_layer_0/angular_velocity = 0.0
5:1/0 = 0
5:1/0/physics_layer_0/linear_velocity = Vector2(0, 0)
5:1/0/physics_layer_0/angular_velocity = 0.0
1:2/0 = 0
1:2/0/physics_layer_0/linear_velocity = Vector2(0, 0)
1:2/0/physics_layer_0/angular_velocity = 0.0
2:2/0 = 0
2:2/0/physics_layer_0/linear_velocity = Vector2(0, 0)
2:2/0/physics_layer_0/angular_velocity = 0.0
3:2/0 = 0
3:2/0/physics_layer_0/linear_velocity = Vector2(0, 0)
3:2/0/physics_layer_0/angular_velocity = 0.0
1:4/0 = 0
1:4/0/physics_layer_0/linear_velocity = Vector2(0, 0)
1:4/0/physics_layer_0/angular_velocity = 0.0
2:4/0 = 0
2:4/0/physics_layer_0/linear_velocity = Vector2(0, 0)
2:4/0/physics_layer_0/angular_velocity = 0.0
3:4/0 = 0
3:4/0/physics_layer_0/linear_velocity = Vector2(0, 0)
3:4/0/physics_layer_0/angular_velocity = 0.0
1:5/0 = 0
1:5/0/physics_layer_0/linear_velocity = Vector2(0, 0)
1:5/0/physics_layer_0/angular_velocity = 0.0
2:5/0 = 0
2:5/0/physics_layer_0/linear_velocity = Vector2(0, 0)
2:5/0/physics_layer_0/angular_velocity = 0.0
3:5/0 = 0
3:5/0/physics_layer_0/linear_velocity = Vector2(0, 0)
3:5/0/physics_layer_0/angular_velocity = 0.0
1:6/0 = 0
1:6/0/physics_layer_0/linear_velocity = Vector2(0, 0)
1:6/0/physics_layer_0/angular_velocity = 0.0
2:6/0 = 0
2:6/0/physics_layer_0/linear_velocity = Vector2(0, 0)
2:6/0/physics_layer_0/angular_velocity = 0.0
3:6/0 = 0
3:6/0/physics_layer_0/linear_velocity = Vector2(0, 0)
3:6/0/physics_layer_0/angular_velocity = 0.0
4:6/0 = 0
4:6/0/physics_layer_0/linear_velocity = Vector2(0, 0)
4:6/0/physics_layer_0/angular_velocity = 0.0
5:6/0 = 0
5:6/0/physics_layer_0/linear_velocity = Vector2(0, 0)
5:6/0/physics_layer_0/angular_velocity = 0.0
5:5/0 = 0
5:5/0/physics_layer_0/linear_velocity = Vector2(0, 0)
5:5/0/physics_layer_0/angular_velocity = 0.0
5:4/0 = 0
5:4/0/physics_layer_0/linear_velocity = Vector2(0, 0)
5:4/0/physics_layer_0/angular_velocity = 0.0
4:4/0 = 0
4:4/0/physics_layer_0/linear_velocity = Vector2(0, 0)
4:4/0/physics_layer_0/angular_velocity = 0.0
4:5/0 = 0
4:5/0/physics_layer_0/linear_velocity = Vector2(0, 0)
4:5/0/physics_layer_0/angular_velocity = 0.0

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_r2jbg"]
texture = ExtResource("2_no3xr")
0:0/0 = 0
0:0/0/physics_layer_0/linear_velocity = Vector2(0, 0)
0:0/0/physics_layer_0/angular_velocity = 0.0

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_b5kop"]
texture = ExtResource("3_lojli")
0:5/size_in_atlas = Vector2i(3, 4)
0:5/0 = 0
0:5/0/y_sort_origin = 20
0:5/0/physics_layer_0/linear_velocity = Vector2(0, 0)
0:5/0/physics_layer_0/angular_velocity = 0.0
0:5/0/physics_layer_0/polygon_0/points = PackedVector2Array(-3.5, 11.5, 4, 11.5, 9.5, 14.5, 11.5, 21.5, 9.5, 26.5, -3.5, 26, -10.5, 21.5, -12, 14)
6:7/size_in_atlas = Vector2i(2, 2)
6:7/0 = 0
6:7/0/y_sort_origin = 9
6:7/0/physics_layer_0/linear_velocity = Vector2(0, 0)
6:7/0/physics_layer_0/angular_velocity = 0.0
6:7/0/physics_layer_0/polygon_0/points = PackedVector2Array(13.5, 1, 15, 11, 9.5, 14.5, -9.5, 14.5, -14.5, 11, -14.5, 0.5)
8:6/size_in_atlas = Vector2i(2, 3)
8:6/0 = 0
8:6/0/y_sort_origin = 17
8:6/0/physics_layer_0/linear_velocity = Vector2(0, 0)
8:6/0/physics_layer_0/angular_velocity = 0.0
8:6/0/physics_layer_0/polygon_0/points = PackedVector2Array(1.5, 13.5, 5, 17.5, 4.5, 20.5, 0, 21, -4.5, 19.5, -5, 15)
10:7/size_in_atlas = Vector2i(2, 2)
10:7/0 = 0
10:7/0/y_sort_origin = 5
10:7/0/physics_layer_0/linear_velocity = Vector2(0, 0)
10:7/0/physics_layer_0/angular_velocity = 0.0
10:7/0/physics_layer_0/polygon_0/points = PackedVector2Array(8, 0.5, 10.5, 4.5, 8, 8, -5.5, 8, -11, 5.5, -8, -1.5)
0:1/0 = 0
0:1/0/y_sort_origin = 5
0:1/0/physics_layer_0/linear_velocity = Vector2(0, 0)
0:1/0/physics_layer_0/angular_velocity = 0.0
0:1/0/physics_layer_0/polygon_0/points = PackedVector2Array(6.5, 4.5, 4.5, 8, -1.5, 8, -4, 6, -7, 4, -7, 0, 6.5, 0.5)
0:0/0 = 0
0:0/0/y_sort_origin = 4
0:0/0/physics_layer_0/linear_velocity = Vector2(0, 0)
0:0/0/physics_layer_0/angular_velocity = 0.0
0:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(6, 2, 0, 5, -6, 2, 0, 1.5)

[sub_resource type="TileSet" id="TileSet_m1cvo"]
physics_layer_0/collision_layer = 1
sources/0 = SubResource("TileSetAtlasSource_umt88")
sources/1 = SubResource("TileSetAtlasSource_r2jbg")
sources/2 = SubResource("TileSetAtlasSource_b5kop")

[sub_resource type="RectangleShape2D" id="RectangleShape2D_nrq2i"]
size = Vector2(40, 41)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_vdwqs"]
size = Vector2(41, 20)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_2gs2j"]
size = Vector2(20, 51)

[node name="world" type="Node2D"]
y_sort_enabled = true
script = ExtResource("1_cbppm")

[node name="TileMap" type="TileMap" parent="."]
y_sort_enabled = true
tile_set = SubResource("TileSet_m1cvo")
format = 2
layer_0/name = "ground"
layer_0/tile_data = PackedInt32Array(65537, 1, 0, 4, 65536, 0, 131082, 131072, 0, 65549, 1, 0, 15, 1, 0, 131090, 131072, 1, 262162, 1, 0, 196624, 131072, 1, 196622, 131072, 1, 196616, 131072, 0, 196613, 131072, 1, 262146, 131072, 1, 589822, 1, 0, 393215, 131072, 2, -65538, 1, 0, -65537, 1, 0, -131072, 1, 0, -131071, 1, 0, -65534, 1, 0, 3, 1, 0, 131078, 196608, 1, 131079, 1, 0, 196617, 327680, 1, 262154, 131072, 1, 327691, 131072, 2, 393228, 1, 0, 393229, 1, 0, 458765, 1, 0, 458766, 1, 0, 524302, 1, 0, 524303, 1, 0, 393227, 1, 0, 327690, 131072, 2, 327689, 262144, 0, 262152, 131072, 1, 196615, 131072, 0, 65540, 65536, 1, -65535, 1, 0, -131070, 1, 0, -131069, 1, 0, 6, 262144, 0, 262155, 131072, 1, 327692, 131072, 2, 458767, 1, 0, -131065, 196608, 1, -131064, 1, 0, -131063, 1, 0, -131062, 1, 0, -131061, 1, 0, -131060, 1, 0, -131059, 1, 0, -131058, 1, 0, -131057, 1, 0, -131056, 1, 0, -131055, 1, 0, -131054, 1, 0, -131053, 1, 0, -65517, 1, 0, 19, 1, 0, 65555, 131072, 0, 131091, 131072, 1, 196627, 131072, 2, 262163, 1, 0, 327699, 1, 0, 393235, 1, 0, 458771, 1, 0, 524307, 1, 0, 589843, 1, 0, 655379, 1, 0, -2, 1, 0, 65534, 1, 0, 131070, 196608, 0, 196606, 262144, 1, 262142, 131072, 1, 327678, 131072, 1, 393214, 131072, 2, 458750, 1, 0, 524286, 1, 0, 655358, 1, 0, 720894, 1, 0, 720895, 1, 0, 655360, 1, 0, 655361, 1, 0, 655362, 1, 0, 655363, 1, 0, 655364, 1, 0, 655365, 1, 0, 655366, 65536, 1, 655367, 131072, 1, 655368, 196608, 1, 655369, 1, 0, 655370, 1, 0, 655371, 1, 0, 655372, 1, 0, 655373, 1, 0, 655374, 1, 0, 655375, 1, 0, 655376, 1, 0, 655377, 1, 0, 655378, 1, 0, -1, 1, 0, 0, 1, 0, 262150, 131072, 1, 262151, 131072, 1, 327688, 131072, 1, 393225, 196608, 2, 393226, 1, 0, 458763, 1, 0, 524300, 1, 0, 524301, 1, 0, 589838, 1, 0, 65535, 1, 0, 131071, 1, 0, 196607, 131072, 0, 262143, 131072, 1, 327679, 131072, 1, 458751, 1, 0, 524287, 1, 0, 589823, 1, 0, 655359, 1, 0, 589824, 1, 0, 524288, 1, 0, 458752, 1, 0, 327680, 131072, 2, 262144, 131072, 1, 196608, 131072, 1, 131072, 131072, 0, 65536, 1, 0, -65536, 1, 0, 131073, 196608, 0, 196609, 262144, 1, 262145, 131072, 1, 327681, 327680, 0, 393217, 65536, 2, 393218, 131072, 2, 458754, 1, 0, 524290, 1, 0, 589826, 1, 0, 589825, 1, 0, 458753, 1, 0, 524289, 1, 0, 327682, 131072, 1, 196610, 131072, 0, 131074, 1, 0, -65533, 1, 0, 196611, 131072, 0, 262147, 131072, 1, 327683, 131072, 1, 393219, 131072, 2, 458755, 1, 0, 524291, 1, 0, 589828, 1, 0, 589827, 1, 0, 524292, 1, 0, 458756, 1, 0, 393220, 131072, 2, 327684, 131072, 1, 262148, 131072, 1, 196612, 327680, 1, 5, 327680, 1, 131077, 131072, 1, 262149, 131072, 1, 327685, 131072, 1, 393221, 131072, 2, 458757, 1, 0, 524293, 1, 0, 589829, 1, 0, 589830, 65536, 1, 524294, 65536, 1, 458758, 65536, 1, 393222, 327680, 0, 327686, 131072, 1, 196614, 262144, 1, -65529, 196608, 1, 7, 196608, 2, 327687, 131072, 1, 393223, 131072, 1, 458759, 131072, 1, 524295, 131072, 1, 589831, 131072, 1, 589832, 196608, 1, 524296, 196608, 1, 458760, 196608, 1, 393224, 262144, 0, 8, 1, 0, -65528, 1, 0, -65527, 1, 0, 9, 1, 0, 458761, 1, 0, 524297, 1, 0, 589833, 1, 0, 589834, 1, 0, 524298, 1, 0, 458762, 1, 0, 65546, 1, 0, 10, 1, 0, -65526, 1, 0, -65525, 1, 0, 11, 1, 0, 12, 1, 0, 65548, 1, 0, 131084, 131072, 0, 262156, 131072, 1, 458764, 1, 0, 589836, 1, 0, 589835, 1, 0, 524299, 1, 0, 131083, 131072, 0, 65547, 1, 0, -65524, 1, 0, -65523, 1, 0, -65522, 1, 0, -65521, 1, 0, -65520, 1, 0, -65519, 1, 0, -65518, 1, 0, 18, 1, 0, 17, 1, 0, 16, 1, 0, 14, 1, 0, 13, 1, 0, 65550, 1, 0, 65551, 1, 0, 65552, 1, 0, 65553, 65536, 0, 65554, 131072, 0, 131089, 327680, 1, 131088, 131072, 0, 131087, 131072, 0, 131086, 131072, 0, 262157, 262144, 0, 262158, 131072, 2, 196623, 131072, 1, 196625, 262144, 0, 196626, 131072, 2, 262161, 196608, 2, 262160, 131072, 2, 262159, 131072, 2, 327693, 196608, 2, 589837, 1, 0, 589839, 1, 0, 589840, 1, 0, 589841, 1, 0, 589842, 1, 0, 524306, 1, 0, 458770, 1, 0, 393234, 1, 0, 327698, 1, 0, 327697, 1, 0, 327696, 1, 0, 327695, 1, 0, 327694, 1, 0, 393230, 1, 0, 393231, 1, 0, 393232, 1, 0, 393233, 1, 0, 458769, 1, 0, 524305, 1, 0, 524304, 1, 0, 458768, 1, 0, 786430, 1, 0, 786431, 1, 0, 720896, 1, 0, 720897, 1, 0, 720898, 1, 0, 720899, 1, 0, 720900, 1, 0, 720901, 1, 0, 720902, 65536, 1, 720903, 131072, 1, 720904, 196608, 1, 720905, 1, 0, 720906, 1, 0, 720907, 1, 0, 720908, 1, 0, 720909, 1, 0, 786446, 1, 0, 786447, 1, 0, 786448, 1, 0, 786449, 1, 0, 786450, 1, 0, 786451, 1, 0, 720915, 1, 0, 720914, 1, 0, 720913, 1, 0, 720912, 1, 0, 720911, 1, 0, 720910, 1, 0, 786445, 1, 0, 786444, 1, 0, 786443, 1, 0, 786442, 1, 0, 786441, 1, 0, 786440, 196608, 1, 786439, 131072, 1, 786438, 65536, 1, 786437, 1, 0, 786436, 1, 0, 786435, 1, 0, 786434, 1, 0, 786433, 1, 0, 786432, 1, 0, 851967, 1, 0, 851966, 1, 0, 393216, 1, 0, 1, 1, 0, -65532, 1, 0, -65531, 65536, 1, -65530, 131072, 1, -131066, 131072, 1, -131067, 65536, 1, -131068, 1, 0, -196604, 1, 0, -196603, 65536, 0, -196602, 327680, 1, -196601, 262144, 0, -262138, 65536, 1, -262139, 1, 0, -262140, 1, 0, -196596, 1, 0, -196595, 1, 0, -196594, 1, 0, -196593, 1, 0, -196592, 1, 0, -196591, 1, 0, -196590, 1, 0, -196589, 1, 0, -262125, 1, 0, -262126, 1, 0, -262127, 1, 0, -262128, 1, 0, -262129, 1, 0, -262130, 1, 0, -262131, 1, 0, -262132, 1, 0, -327668, 1, 0, -327667, 1, 0, -327666, 1, 0, -327665, 1, 0, -327664, 1, 0, -327663, 1, 0, -327662, 1, 0, -327661, 1, 0, -327660, 1, 0, -262124, 1, 0, -196588, 1, 0, -131052, 1, 0, -196597, 1, 0, -196598, 1, 0, 262153, 131072, 1, 196618, 131072, 1, 196619, 131072, 1, 196620, 131072, 1, 196621, 131072, 1, 131085, 131072, 0, 131081, 65536, 0, 131080, 1, 0, 65542, 196608, 1, 65544, 1, 0, 65545, 1, 0, 65543, 1, 0, 65541, 131072, 1, 131075, 1, 0, 131076, 65536, 1, 2, 1, 0, 65538, 1, 0, 65539, 1, 0, -196600, 196608, 2, -262136, 196608, 1, -262137, 131072, 1, -327676, 1, 0, -327674, 131072, 1, -327673, 131072, 1, -327675, 1, 0, -196599, 1, 0, -262135, 1, 0, -262134, 1, 0, -262133, 1, 0, -327669, 1, 0, -327670, 1, 0, -327671, 1, 0)
layer_1/name = "cliffs"
layer_1/enabled = true
layer_1/modulate = Color(1, 1, 1, 1)
layer_1/y_sort_enabled = false
layer_1/y_sort_origin = 0
layer_1/z_index = 0
layer_1/tile_data = PackedInt32Array(-131053, 131072, 5, -131054, 131072, 5, -131055, 131072, 5, -131056, 131072, 5, -131057, 131072, 5, -131058, 131072, 5, -131059, 131072, 5, -131060, 131072, 5, -131061, 131072, 5, -131062, 131072, 5, -131063, 65536, 5, -65527, 65536, 6, 11, 65536, 6, 65549, 65536, 6, 65552, 196608, 6, 17, 131072, 6, 18, 131072, 6, 19, 131072, 6, -65526, 131072, 6, 12, 131072, 6, 65550, 131072, 6, 65551, 131072, 6, -65525, 327680, 4, 13, 327680, 4, 16, 262144, 4, -65524, 131072, 5, -65523, 131072, 5, -65522, 131072, 5, -65521, 131072, 5, -65520, 131072, 5, -65519, 131072, 5, -65518, 131072, 5, -65517, 131072, 5, 15, 131072, 5, 14, 131072, 5)
layer_2/name = "ysort"
layer_2/enabled = true
layer_2/modulate = Color(1, 1, 1, 1)
layer_2/y_sort_enabled = true
layer_2/y_sort_origin = 0
layer_2/z_index = 0
layer_2/tile_data = PackedInt32Array(-1, 393218, 7, 589825, 655362, 7, 458766, 655362, 7, -131057, 655362, 7, -196595, 2, 5, -196591, 2, 5, 458768, 2, 5, 589828, 2, 5, 524298, 2, 5, -131067, 2, 5, 786431, 524290, 6, -196589, 524290, 6, 655378, 524290, 6, 327699, 524290, 6, 720908, 524290, 6, -65521, 393218, 7, 458752, 393218, 7, 65536, 2, 1, 786448, 2, 1, 720897, 2, 1, 196614, 2, 0, -65535, 2, 5, 9, 393218, 7)

[node name="player" parent="." instance=ExtResource("4_esg56")]
position = Vector2(120, 196)

[node name="Enemy" parent="." instance=ExtResource("5_ls2iy")]
position = Vector2(206, 70)

[node name="Collisions" type="StaticBody2D" parent="."]
position = Vector2(-18, -32)

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="Collisions"]
position = Vector2(1, -1)
polygon = PackedVector2Array(18, 32, 101, 32, 102, -7, 102, -34, 118, -49, 164, -48, 163, -3, 162, -3, 141, -2, 141, 31, 197, 30, 197, 42, 201, 46, 228, 46, 230, 48, 230, 58, 234, 62, 285, 62, 289, 58, 289, 46, 332, 46, 332, 240, 158, 241, 159, 262, 117, 262, 117, 241, 18, 240, 17, 125, -2, 124, -2, 70, 17, 70, 18, 32, -83, 45, -86, 210, -44, 248, -1, 269, 358, 273, 414, 233, 410, 15, 404, -101, 104, -101, 28, -53, -11, -12, -13, 0)

[node name="CliffSide_transition_point" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="CliffSide_transition_point"]
position = Vector2(103, -21.5)
shape = SubResource("RectangleShape2D_nrq2i")

[node name="Beach_transition_point" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Beach_transition_point"]
position = Vector2(119.5, 217)
shape = SubResource("RectangleShape2D_vdwqs")

[node name="BossArea" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="BossArea"]
position = Vector2(-8, 64.5)
shape = SubResource("RectangleShape2D_2gs2j")

[connection signal="body_entered" from="CliffSide_transition_point" to="." method="_on_cliff_side_transition_point_body_entered"]
[connection signal="body_exited" from="CliffSide_transition_point" to="." method="_on_cliff_side_transition_point_body_exited"]
[connection signal="body_entered" from="Beach_transition_point" to="." method="_on_beach_transition_point_body_entered"]
[connection signal="body_exited" from="Beach_transition_point" to="." method="_on_beach_transition_point_body_exited"]
[connection signal="body_entered" from="BossArea" to="." method="_on_boss_area_body_entered"]
[connection signal="body_exited" from="BossArea" to="." method="_on_boss_area_body_exited"]
